<resources>
    <string name="app_name">App Park</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти или зарегистрироваться</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome">"Добро пожаловать!"</string>
    <string name="invalid_username">Недопустимое имя пользователя</string>
    <string name="invalid_password">Пароль должен быть больше 5 символов</string>
    <string name="login_failed">"Ошибка входа"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Личный кабинет</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Главное меню</string>
    <string name="menu_personal_info">Личная информация</string>
    <string name="menu_history">История покупок</string>
    <string name="menu_skidki">Система скидок</string>

    <string name="logo_attract">Аттракционы</string>
    <string name="logo_events">Мероприятия</string>
    <string name="logo_food">Фуд-корт</string>
    <string name="logo_zone">Зоны отдыха</string>
</resources>