<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_personal_info"
            android:icon="?attr/actionModeSelectAllDrawable"
            android:title="@string/menu_personal_info" />
        <item
            android:id="@+id/nav_history"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_skidki"
            android:icon="@android:drawable/star_big_off"
            android:title="@string/menu_skidki" />
    </group>
</menu>