<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_personal_info"
        android:name="com.example.myapplication.ui.personal_info.PersonalInfoFragment"
        android:label="@string/menu_personal_info"
        tools:layout="@layout/fragment_personal_info" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.myapplication.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_skidki"
        android:name="com.example.myapplication.ui.skidki.SkidkiFragment"
        android:label="@string/menu_skidki"
        tools:layout="@layout/fragment_skidki" />
</navigation>